add osmand helpers, but it doesn't work

--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,18 @@ buildscript {
 
 allprojects {
     repositories {
+        ivy {
+            name = "OsmAndBinariesIvy"
+            url = "https://builder.osmand.net"
+            layout "pattern", {
+                artifact "ivy/[organisation]/[module]/[revision]/[artifact]-[revision](-[classifier]).[ext]"
+            }
+        }
         google()
         mavenCentral()
+        maven {
+            url "https://jitpack.io"
+        }
     }
 }
 
