--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     implementation 'com.android.support:support-annotations:+'
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
+    implementation 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
 }
