--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,11 +38,11 @@ android {
 dependencies {
     implementation "net.osmand:android-aidl-lib:master-snapshot@aar"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.1'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'com.android.support:support-annotations:+'
-    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.annotation:annotation:1.3.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
     implementation 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
 }
